--- a/package.json
+++ b/package.json
@@ -48,12 +48,14 @@
     "eslint-plugin-n8n-nodes-base": "^1.16.1",
     "gulp": "^4.0.2",
     "prettier": "^3.3.2",
+    "require-glob": "^4.1.0",
     "typescript": "^5.5.3"
   },
   "peerDependencies": {
     "n8n-workflow": "*"
   },
   "dependencies": {
+    "form-data": "^4.0.1",
     "glob": "^11.0.1"
   }
 }
