fix: 动态加载不行

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-nodes-wechat-work",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "wechat work node",
   "keywords": [
     "n8n-community-node-package",
@@ -57,7 +57,6 @@
     "n8n-workflow": "*"
   },
   "dependencies": {
-    "form-data": "^4.0.1",
-    "glob": "^11.0.1"
+    "form-data": "^4.0.1"
   }
 }
