feat: 更新 package.json 中的作者信息，添加 README.md 文档，提供企业微信节点的安装和使用说明

--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   ],
   "license": "MIT",
   "homepage": "https://www.npmjs.com/package/n8n-nodes-dty-work-wechat",
-  "author": [
+  "author": {
+    "name": "goodhawk",
+    "email": "guinan.lin@foxmail.com"
+  },
+  "contributors": [
     {
       "name": "blowsnow",
       "email": "im.blowsnow@gmail.com"
-    },
-    {
-      "name": "goodhawk",
-      "email": "guinan.lin@foxmail.com"
     }
   ],
   "repository": {
